# KursProject

./: .gitignore  AirSensor.cpp  AirSensor.h  CMakeLists.txt  HUB2.cpp  HUB2.h  IoTDevice.h  Power_Grid.cpp  Power_Grid.h  TrafficLight.cpp  TrafficLight.h  main  main.cpp
